--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -102,6 +102,7 @@ const mentors = [
     name: "Maribel Bartolo",
     topic: "Recursos Humanos",
     availability: "Disponible",
+    linkedin: "https://www.linkedin.com/in/maribel-bartol-bonifacio", // Add LinkedIn URL here
     image: maribelOptimized.src,
     imageSrcSet: maribelOptimized.srcSet.attribute,
     imageWidth: maribelOptimized.attributes.width,
@@ -134,6 +135,7 @@ const mentors = [
     name: "Nicole Quispe",
     topic: "Business Intelligence",
     availability: "Disponible",
+    linkedin: "https://www.linkedin.com/in/nicoleqc", // Add LinkedIn URL here
     image: nicoleOptimized.src,
     imageSrcSet: nicoleOptimized.srcSet.attribute,
     imageWidth: nicoleOptimized.attributes.width,
@@ -182,6 +184,7 @@ const mentors = [
     name: "Adrian Zamudio",
     topic: "Marketing",
     availability: "Disponible",
+    linkedin: "https://www.linkedin.com/in/azamudiop", // Add LinkedIn URL here
     image: adrianOptimized.src,
     imageSrcSet: adrianOptimized.srcSet.attribute,
     imageWidth: adrianOptimized.attributes.width,
@@ -203,6 +206,7 @@ const mentors = [
     name: "Milagros Moreno",
     topic: "Análisis de Datos",
     availability: "Disponible",
+    linkedin: "https://www.linkedin.com/in/milagros-moreno-davila-195b6a251",
     image: milagrosOptimized.src,
     imageSrcSet: milagrosOptimized.srcSet.attribute,
     imageWidth: milagrosOptimized.attributes.width,
