--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,8 @@
 
 		<!-- Canonical -->
 		<link rel="canonical" href="https://cuestionable.pe/" />
+		<link rel="alternate" hreflang="es-PE" href="https://cuestionable.pe/" />
+		<link rel="alternate" hreflang="x-default" href="https://cuestionable.pe/" />
 
 		<!-- Open Graph -->
 		<meta property="og:type" content="website" />
